Use MultiSet instead of Bag